front end updates

--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -25,6 +25,11 @@
     font-weight: 300;
     border-radius: 5px;
     margin: 10px;
+    display: flex;
+    align-items: center;
+}
+.sideBarIcon{
+   margin-right: 10px;
 }
 .sidebarListItem.active,
 .sidebarListItem:hover{
